--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
     <main class="content">
         <figure class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of a desk with a notebook, pen holder, laptop, and coffee on top" />
             <h2>Search Engine Optimization</h2>
             <figcaption>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </figcaption>
         </figure>
         <figure id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Image of an over the shoulder view of a man viewing a computer screen while looking at his cellphone. on the screen there are graphs and a title saying reputation." />
             <h2>Online Reputation Management</h2>
             <figcaption>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
