--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </figcaption>
         </figure>
         <figure id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Image of people sitting at a conference table with several icons from social media scattered across the table top" />
             <h2>Social Media Marketing</h2>
             <figcaption>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -54,21 +54,21 @@
     <aside class="benefits">
         <figure class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="Icon of a machine cog going into a machine and outputting money." />
             <figcaption>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </figcaption>
         </figure>
         <figure class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="Icon of a man in a suit with a light bulb as a head." />
             <figcaption>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </figcaption>
         </figure>
         <figure class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="Icon of a machine cog with coins orbitting it."></img>
             <figcaption>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </figcaption>
