--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="hero"></header>
 
     <main class="content">
-        <figure class="search-engine-optimization">
+        <figure id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Image of a desk with a notebook, pen holder, laptop, and coffee on top" />
             <h2>Search Engine Optimization</h2>
             <figcaption>
