--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Module 1</title>
+    <title>Refactored Sniffle</title>
 </head>
 
 <body>
